--- a/prep/pressures/oa/v2020/oa_pressure_layer.Rmd
+++ b/prep/pressures/oa/v2020/oa_pressure_layer.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'OHI+ Palmyra 2020: UV Radiation Pressure'
+title: 'OHI+ Palmyra 2020: Ocean Acidification Pressure Layer'
 author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
@@ -16,6 +16,8 @@ output:
 ---
 
 # Summary 
+
+This script calculates the ocean acidification pressure layer derived from [NOAA's East Coast Ocean Acidification Product Suite](https://www.coral.noaa.gov/accrete/east-coast-oaps.html).
 
 The Ultraviolet Radiation pressure layer is generated from daily data on Local Noon Erythemal UV Irradiance (mW/m2) derived from satellite observations. 
 
