--- a/prep/pressures/slr/v2020/slr_pressure_layer.Rmd
+++ b/prep/pressures/slr/v2020/slr_pressure_layer.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'OHI+ Palmyra 2020: UV Radiation Pressure'
+title: 'OHI+ Palmyra 2020: Sea Level Rise Pressure Layer'
 author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
@@ -17,267 +17,349 @@ output:
 
 # Summary 
 
-The Ultraviolet Radiation pressure layer is generated from daily data on Local Noon Erythemal UV Irradiance (mW/m2) derived from satellite observations. 
+This sea level rise (SLR) pressure layer preparation script does the following for newly available SLR data:
+  
+- Clips all monthly rasters to the coast using a 3 nautical mile offshore buffer
+- Calculates annual mean sea level anomaly rasters from monthly data
+- Rescales values from 0 to 1 using the reference point (maximum annual anomaly across the time series)
+- Sets to zero all negative values, indicating decreases in mean sea level
+- Resamples raster to ~ 1km^2^ and reprojects to Molleweide
 
-For the global OHI assessment, the raw data is processed into anomaly products. The data product of that process are rasters of total number of weekly anomalies per year. An anomaly is defined as greater than the mean climatology plus 1 standard deviation for that cell across the entire dataset (2005-2016).
+This process is completed entirely within this script. The raw data is downloaded externally and held on a server at NCEAS. Although the raw data is not provided, this script can be used on the data downloaded from Aviso [here](https://www.aviso.altimetry.fr/data/products/sea-surface-height-products/global/gridded-sea-level-anomalies-mean-and-climatology.html). You will need to register with Aviso in order to get a username and password for data access.
 
-This script takes the global anomaly rasters and crops them to Palmyra. This time we have decided to use a reference point that represents a regime shift. Once a given cell is anomalous for more than 50% of a five-year period, it has shifted into a new regime. All cells that have a value greater than 130 weeks (51% of a 5 year time period) are assigned a 1. The rest of the cells are scaled to this reference point by dividing by 130.  
+***
 
 # Data
 
-The Ultraviolet Radiation pressures layer uses the [Aura OMI GLobal Surface UVB Data Product](https://disc.gsfc.nasa.gov/uui/datasets/OMUVBG_V003/summary#).  
+The source data are monthly mean sea level anomalies, in meters. These anomalies are calculated by subtracting the current absolute sea level for each month from the average sea level for that month calculated from 1993 - 2019.
 
-**Native Data Resolution**: 0.25 degrees  
-**Values**: OMI/Aura Surface UVB Irradiance and Erythemal Dose Daily L2 Global Gridded 0.25 degree x 0.25 degree V3  
-**Time Range**: Daily data from 2005 - 2019  
-**Format**: HDF5
+**Reference**: AVISO [Monthly mean Maps of Sea Level Anomaly](https://www.aviso.altimetry.fr/data/products/sea-surface-height-products/global/gridded-sea-level-anomalies-mean-and-climatology.html)
 
-Citation: Jari Hovila, Antii Arola, and Johanna Tamminen (2014), OMI/Aura Surface UVB Irradiance and Erythemal Dose Daily L2 Global Gridded 0.25 degree x 0.25 degree V3, NASA Goddard Space Flight Center, Goddard Earth Sciences Data and Information Services Center (GES DISC), Accessed [June 22, 2020] DOI:10.5067/Aura/OMI/DATA2028.  
+**Downloaded**: 
+
+**Description**: Monthly mean sea level anomaly (meters above mean sea level)
+
+**Native data resolution**: 0.25 degree grid cells
+
+**Time range**: January 1993 - 20??, monthly data provided for each year
+
+**Format**: NetCDF
+
+***
 
 # Setup 
 
 ```{r setup, message = F, warning = F}
-knitr::opts_chunk$set(echo = FALSE)
 
-library(tidyverse)
-library(doParallel)
-library(foreach)
-library(rworldmap)
+knitr::opts_chunk$set(fig.width = 10, fig.height = 8, fig.path = 'figs/', message = FALSE, warning = FALSE)
+
 library(raster)
-library(janitor)
-library(ggplot2)
-library(lubridate)
-library(here)
+library(tidyverse)
+library(sf)
+library(RColorBrewer)
+library(googleVis)
+library(foreach)
+library(doParallel)
+library(fasterize)
+library(rasterVis)
+library(animation)
 
 # Source and set file paths
 source(here('src/R/common.R'))
 
-dir_prs   <- '~/github/pal-prep/prep/pressures/uv/v2020'
+dir_git       <- '~/github/pal-prep' # Path to the pal-prep github directory
+dir_prs       <- '~/github/pal-prep/prep/pressures/slr/v2020'
+# dir_anx       <- file.path(dir_M, 'git-annex/foursite/palmyra/dataprep') # Path to the NCEAS server where the bigger files are kept/saved
+dir_prs_slr   <- sprintf("%s/git-annex/foursite/palmyra/dataprep/prs_slr", dir_M)
+
+p4s_wgs84     <- "+proj=longlat +datum=WGS84 +no_defs +ellps=WGS84 +towgs84=0,0,0" # proj4string
+cols          <- rev(colorRampPalette(brewer.pal(9, "Spectral"))(255)) # Rainbow color scheme for maps
+mollCRS       <- CRS("+proj=moll") # mollweide projection
+
+## Read in ocean raster with cells at 1km -- template for resampling (held on an NCEAS server)
+ocean         <- raster(file.path(dir_M, "git-annex/globalprep/spatial/v2017/ocean.tif"))
+
 ```
+
+***
 
 # Methods
 
-## Get Global Data
+## Load in SLR data files
 
-We will use the global data that was processed for OHI Global 2020, which includes data from 2005 - 2019. This data is saved on a server at NCEAS.   
+We don't need to download the data from the AVISO website because it's already been downloaded for the most recent year of global. So we can just grab the NetCDF files from the global folder.
 
-```{r get-global-uv-data, eval=F}
+```{r read_files}
 
-anom_files <- list.files(file.path(glb_anx, 'prs_uv/v2020/int/annual_anomalies_diff'),
-                         pattern = "annual_pos",
-                         full.names = T)
+## d2016/msla_monthly_mean has data for 1993-2015
+## Then include list.files for d2017 through the data folder for current scenario year
+slr_nc_files <- c(list.files(file.path(dir_M, "git-annex/globalprep/_raw_data/AVISO_slr/d2020"),
+                       full.names = TRUE, pattern = ".nc"),
+              list.files(file.path(dir_M, "git-annex/globalprep/_raw_data/AVISO_slr/d2019"),
+                       full.names = TRUE, pattern = ".nc"),
+              list.files(file.path(dir_M, "git-annex/globalprep/_raw_data/AVISO_slr/d2018"),
+                       full.names = TRUE, pattern = ".nc"),
+              list.files(file.path(dir_M, "git-annex/globalprep/_raw_data/AVISO_slr/d2017"),
+                       full.names = TRUE, pattern = ".nc"),
+              list.files(file.path(dir_M, "git-annex/globalprep/_raw_data/AVISO_slr/d2016/msla_monthly_mean"),
+                      full.names = TRUE, pattern = ".nc"))
 
-# Get world map and plot the most recent year of data:
-world = getMap()
+slr_nc_files <- slr_nc_files[-1:-2] # Double check this, but since the first two files are zip files I am confident in removing them. However, I did grab it directly from the most recent version of global so I so still want to make sure it's correct
 
-plot(raster(anom_files[15]), col=cols, main = "UV Radiation Anomalies 2019", box=F, axes=F,
-     legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
-plot(world, col='black', add=T)
 ```
 
-## Crop to Palmyra
+A peek into what the monthly data looks like
 
-Using the `crop` function from the `raster` package we crop all uv rasters to the Palmyra extent and then reproject them to the US Albers projection for consistency across the assessment. We crop the global rasters first to reduce the time it takes to reproject the rasters. `ocean_ras_50nm` is used as a mask to remove land cells from the raster for better visuals.  
+```{r explore_monthly}
 
+plot(raster(slr_nc_files[3]), col = cols, axes = F, 
+     main = paste("Year", substr(slr_nc_files[3], 90, 93), "Month", substr(slr_nc_files[3], 96, 97)))
 
-```{r crop-to-pal, eval=F}
-registerDoParallel(10) # Register 10 cores for parallel processing
+```
 
-foreach(f = anom_files) %dopar% {
-  #f = anom_files[15]
+## Convert .tif files into usable rasters
+
+The following code is used to:
+
+1. Rasterize each monthly NetCDF file
+2. Rotate each raster so that the Atlantic Ocean is centered in the raster, and changes the extent from 0 to 360 to -180 to 180, which is needed when using wgs or us_albers projections/extents
+
+```{r rasterize_monthly, results = 'hide'}
+
+## Created 'msla_annual_mean', 'msla_annual_us_albers', 'msla_annual_us_albers_coastal', and 'msla_monthly' folders in 'int'
+
+registerDoParallel(10)
+
+## Parallel forloop function that rotates each monthly file, sets the long/lat projection, and keeps only coastal cells - saved to GitHub
+foreach(file = nc_files) %dopar% {
   
-  if(!file.exists(paste0(dir_anx,'/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_',
-                         substr(basename(f), 22, 25),'.tif'))) {
-    
-  raster(f) %>%
-    projectRaster(ocean_rast3_100, method = 'ngb') %>%
-    crop(usalb_ext3) %>%  
-    mask(ocean_rast3_100, filename = paste0(dir_anx, '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_',
-                                             substr(basename(f), 22, 25),'.tif'), overwrite=T)
-    
-  } else {
-    message("Raster exists")
-  }
+  m_yr <- substr(file, nchar(file)-10, nchar(file)-3) 
+  
+  ## Read in month raster
+  r <- raster(file) %>% 
+    rotate()
+  
+  ## Define projection of the raster before reprojecting; double check projection (USA Contiguous albers equal area)
+  
+  r <- raster::crop(r, wgs_ext)
+  
+  ## Write raster to int folder in prs_slr
+  fp <- sprintf("%s/int/msla_monthly/msla_monthly_%s.tif", dir_prs_slr, m_yr)
+  writeRaster(r, filename = fp, overwrite = TRUE)
 }
- 
+
 ```
 
-```{r check, eval=F, include=F}
-# Check a few rasters to make sure this makes sense:
-check07 <- raster(file.path(dir_anx, '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_2007.tif'))
-check19 <- raster(file.path(dir_anx, '/dataprep/prs_uv/output/uv_annual_anoms/annual_anom_2019.tif'))
-    
-plot(check07, col=cols, 
-     main = "Ultraviolet Radiation 2007", 
-     legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
+## Calculate annual mean sea level anomalies
 
-plot(check19, col=cols, 
-     main = "Ultraviolet Radiation 2016",
-     legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
-```
+Annual mean sea level anomaly rasters are calculated from the monthly data.
 
+```{r calc_annual_mean, results='hide'}
 
-## Visualize Change
+msla_files <- list.files(sprintf("%s/int/msla_monthly", dir_prs_slr), 
+                         full.names = TRUE)
+maxyr <- substr(msla_files, 83, 86) %>% as.numeric() %>% max()
 
-Visualize the change in radiation anomalies over time.   
-
-```{r gif1, eval=F}
-
-l <- lapply(list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_annual_anoms"), full.names=T), raster) %>%
-                brick()
-
-names(l) <- paste0("Year", (substr(names(l),13,16))) # Rename each layer for plotting
-
-# Make a gif animation
-library(animation)
-
-saveGIF({
-  for(i in 1:nlayers(l)){
-      # don't forget to fix the zlimits
-      plot(l[[i]], zlim=c(0,52), axes=F, col=cols,
-           main=names(l[[i]]),
-           legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
-      
-  }
-}, movie.name = 'uv_annual_anoms.gif')
-```
-
-<img src="uv_annual_anoms.gif"/>
-
-## Five-year Aggregates
-
-Calculate total anomalous weeks for each 5-year period from 2005 - 2019.         
-
-```{r, five-year, eval=F}
-
-l <- list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_annual_anoms"), full.names=T)
-
-# Last 5 year periood will start in 2015
-for(i in 2005:2015){ #i=2005
+## Stack all rasters for this year, and calculate annual mean, then write as raster
+registerDoParallel(6)
+foreach(yr = c(1993:maxyr)) %dopar% {
   
-  yrs <- c(i,i+1,i+2,i+3,i+4)
-  s   <- stack(l[substr(basename(l), 13, 16)%in%yrs]) %>% sum(.)
+  files <- msla_files[str_detect(msla_files, as.character(yr))]
   
-  writeRaster(s, filename = paste0(dir_anx, "/dataprep/prs_uv/output/uv_sum_anoms/sum_anoms_",
-                                   min(yrs), '-', max(yrs), '.tif'), overwrite=T)
+  rast_annual_mean <- stack(files) %>%
+    calc(mean, na.rm = TRUE) %>%
+    writeRaster(filename = sprintf("%s/int/msla_annual_mean/msla_annual_%s.tif", dir_prs_slr, yr), 
+                overwrite = TRUE)
 }
+
 ```
+
+
+## Change the projection and mask
+
+Since we are only interested in the increase in sea level near the coasts, we apply a mask to the raster layers that removes all cells farther than 3nm offshore. This mask was created previously for another part of this assessment.
+
+```{r projection_masking, results = 'hide'}
+
+## 3nm offshore raster to select only nearshore cells
+three_nm <- raster(file.path(dir_git, "spatial/rasters/ocean_ras3nm_100m.tif"))
+three_nm <- raster::crop(three_nm, usalb_ext3) # Crop to Palmyra extent
+plot(three_nm)
+
+## Reproject means to us albers
+annual_means <- list.files(file.path(dir_prs_slr, "int/msla_annual_mean"), full = TRUE)
+foreach(file = annual_means) %dopar% {  
+  
+ # file = annual_means[26]
+  yr <- str_sub(file, -8, -5)
+  
+  rast_data <- raster(file) %>%
+    projectRaster(crs = us_alb, over = FALSE, progress="text") %>%
+    raster::resample(three_nm, method = "ngb", 
+             filename = sprintf("%s/int/msla_annual_us_albers/mlsa_annual_us_albers_%s.tif", 
+                                dir_prs_slr, yr), overwrite = TRUE) %>% 
+    mask(three_nm, filename = sprintf("%s/int/msla_annual_us_albers_coastal/msla_annual_us_albers_coastal_%s.tif", dir_prs_slr, yr), overwrite = TRUE)
+}
+plot(raster(file.path(dir_prs_slr, "int/msla_annual_us_albers_coastal/msla_annual_us_albers_coastal_2010.tif")))
+
+```
+
+
+## Reference Point
+
+We are using a reference point 1.1 times larger than the maximum value in Palmyra from 1993-2019. The current maximum value is unlikely to be the future max, and setting this reference point allows for an increase in sea level rise pressure into the future.
+
+```{r reference_point}
+
+coastal_rasts <- list.files(file.path(dir_prs_slr, "int/msla_annual_us_albers_coastal"), pattern = "tif", full.names = TRUE)
+
+# Get data across all years
+registerDoParallel(8)
+
+vals <- foreach(i = 1993:2019, .combine = c) %dopar% { 
+  
+  # i = 2017
+  coastal_rasts[which(str_sub(coastal_rasts, -8, -5) == i)] %>%
+    raster() %>%
+    getValues() %>%
+    na.omit()
+  
+}
+
+ref <- 1.1*max(vals)
+
+```
+
+The reference point is `r ref` meters.
 
 ## Rescale
 
-To account for annual variation, we look at UV anomalies in 5 year periods, so the maximum value possible per cell is 260 anomalous weeks. To rescale the values from 0 to 1 we need to set a reference point. Previously, the reference point for UV has just been the maximum difference in anomalous weeks between the most recent time period and a historical reference period (2005-2009).
+We use the reference point to rescale all values from 0 to 1. If a value is greater than the reference point, it is automatically given a value of 1.
 
-This time we have decided to use a reference point that represents a regime shift. Once a given cell is anomalous for more than 50% of a five-year period, it has shifted into a new regime. All cells that have a value greater than 130 weeks (51% of a 5 year time period) are assigned a 1. The rest of the cells are scaled to this reference point by dividing by 130.
+```{r rescale, results='hide'}
 
-```{r rescale, eval=F}
+registerDoParallel(10) 
 
-uv_aggs <- list.files(file.path(dir_anx, "/dataprep/prs_uv/output/uv_sum_anoms"), full.names=T)
-
-# Define the rescale function
-resc_func <- function(x){
-  
-  # Get the year from the file for naming the output raster
-  yrs <- substr(basename(x), 11, 19)
- 
-  # If a cell value is >= the reference point (130 weeks), assign a value of 1, otherwise divide by the reference point
-  raster(x) %>%
-  calc(.,fun=function(x){ifelse(x<0, 0, ifelse(x>130, 1, x/130))},
-         filename = paste0(dir_anx, '/dataprep/prs_uv/output/uv_rescaled/uv_rescale_', yrs, '.tif'), overwrite=T)
+foreach(file = coastal_rasts) %dopar% { # file = coastal_rasts[10]
+  yr <- str_sub(file, -8,-5)
+    raster::raster(file) %>%
+    calc(fun = function(x){ifelse(x < 0, 0, x)}) %>% # Set all negative values to 0
+    calc(fun = function(x){ifelse(x > ref, 1, x/ref)}, # Set equal to 1 if greater than ref, otherwise scale
+         filename = sprintf("%s/output/msla_rescaled/slr_%s.tif", dir_prs_slr, yr), overwrite = TRUE)
 }
 
-# Rescale 
-foreach(file = uv_aggs) %dopar% {
-  resc_func(file)
-}
 ```
 
-## Presure Over Time
-
-Visualize the change in aggregated radiation anomolies over time.   
-
-```{r gif_rescale, eval = F}
-
-resc <- lapply(list.files(file.path(dir_anx, '/dataprep/prs_uv/output/uv_rescaled'), full.names=T), raster) %>% 
-  brick()
-
-names(resc) <- paste0("Years_", (substr(names(resc), 12, 20)))
-gsub(".", "-", names(resc), fixed = TRUE)
-
-# Create a gif of values over time
-saveGIF({
-  for(i in 1:nlayers(resc)){
-      # Don't forget to fix the zlimits
-      plot(resc[[i]], zlim=c(0,1), axes=F, col=cols,
-           main=names(resc[[i]]),
-           legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
-      
-  }
-}, movie.name = 'uv_rescale.gif')
-```
-
-<img src="uv_rescale.gif"/>   
+***
 
 # Results
 
-## Scores
+```{r gif_results}
 
-```{r uv-scores, eval=F}
+coastal_rasts <- list.files(file.path(dir_prs_slr, 'output/msla_rescaled'), full.names = T) %>%
+                           stack()
+                         
+names(coastal_rasts) <- paste0("Year_", substr(names(coastal_rasts),5,8))
 
-# Use the rescaled files for scores
-uv_stack <- lapply(list.files(file.path(dir_anx, '/dataprep/prs_uv/output/uv_rescaled'),full.names=T), raster) %>%
+# Make a gif animation
+animation::saveGIF({
+  for(i in 1:nlayers(coastal_rasts)){
+     plot(coastal_rasts[[i]],col='cornsilk2',  main=names(coastal_rasts[[i]]),axes=F,legend=F)
+      # don't forget to fix the zlimits
+    plot(coastal_rasts[[i]], zlim=c(0,1), axes=F, col=cols, add=T)
+      
+  }
+}, movie.name = 'slr_annual_rescaled.gif')
+
+```
+
+<img src="slr_annual_rescaled.gif"/>
+
+## Region scores
+
+Extract data for each region
+
+```{r extract_regional_data, results = 'hide'}
+
+## Read in raster files
+pressure_stack <- lapply(list.files(file.path(dir_prs_slr, 'output/msla_rescaled'), full.names=T), raster) %>%
   brick()
 
-# Find the mean 
-pal_stats <- zonal(uv_stack,  ocean_rast3_100, fun="mean", na.rm=TRUE, progress="text") %>%
-                  data.frame() %>% 
-                  clean_names()
+## Extract data for each region:
+regions_stats <- zonal(pressure_stack,  zones, fun="mean", na.rm=TRUE, progress="text")
+regions_stats2 <- data.frame(regions_stats)
+data <- base::merge(rgn_data, regions_stats, all.y=TRUE, by.x="rgn_id", by.y="zone") %>%
+          dplyr::select(-area_km2)%>%
+  gather("year", "pressure_score",starts_with("slr_")) 
+slr_data_int <- data %>%
+  mutate(year = substr(year, 5, 8)) %>%
+  mutate(year = as.numeric(year))
 
-# Convert into a data frame, add additional columns
-uv_data <- pivot_longer(pal_stats,
-                        cols = uv_rescale_2005_2009:uv_rescale_2015_2019,
-                        names_to = "years", values_to = "pressure_score") %>% 
-  mutate(
-    year = substr(years,17,20),
-    year = as.numeric(year)) %>% 
-  dplyr::select(region_id = zone, year, pressure_score)
+```
 
-# Save to output folder
-write_csv(uv_data, file.path(dir_prs, "output/uv_pressure.csv"))
+Extract data for the region as a whole
+
+```{r extract_region_data}
+
+## Read in raster files
+pressure_stack <- lapply(list.files(file.path(dir_prs_slr, 'output/msla_rescaled'), full.names=T), raster) %>%
+  brick()
+pal_regionstats <- cellStats(pressure_stack, mean)%>% 
+  as.data.frame() %>% 
+  rename(pressure_score = ".") %>% 
+  tibble::rownames_to_column("file_name") %>% 
+  mutate(year = substr(file_name, 5, 8)) %>% 
+  select(-file_name) %>% 
+  mutate(rgn_id = 12, # Change to Palmyra region - what rgn_id is it?
+         rgn_name = "Northeast",
+         state_abv = NA,
+         state_name = NA,
+         state = "Northeast",
+         year = as.numeric(year))
+
+```
+
+Save data
+
+```{r save}
+
+slr_data <- rbind(slr_data_int, pal_regionstats) %>% 
+  select(rgn_id, rgn_name, year, pressure_score) %>% 
+  filter(year >= 2005 & year <= 2019)
+write.csv(slr_data, file.path("~/github/pal-scores/region/layers/cc_slr.csv"), row.names=FALSE)
+
+```
+
+## 2019 scores
+
+```{r map_scores}
+
+last_year <- slr_data%>%
+  filter(year==2019,
+         rgn_id != 12) # Change to Palmyra region ID
+
+## map_scores is a function to plot a tmap map of the scores
+map_scores(last_year, score_var = last_year$pressure_score, scale_label = "Pressure Score", map_title = "Sea Level Rise")
+
+```
+
+## Visualize through time
+
+```{r graph_scores_overtime}
+
+slr_overtime <-ggplot(slr_data)+
+  geom_line(aes(x=year, y = pressure_score, color=rgn_name))+
+  ggtitle("Sea Level Rise Pressure Score") +
+  ylab("Score") +
+  xlab("Year") +
+  theme_classic() 
+slr_overtime
+ggsave(file.path(dir_git, "prep/pressures/slr/v2020/figs/scores_2005-2019.png"), width=7, height=5, dpi=300)
+
 ```
 
 ## Save To Toolbox
 
 ```{r save-to-toolbox, eval=F}
 
-```
-
-
-## Final Visualization
-
-```{r uv-viz}
-uv_data <- read_csv("output/uv_pressure.csv")
-
-
-ggplot(uv_data, aes(x = year, y = pressure_score)) +
-  geom_line() + 
-  scale_x_continuous(expand = c(0,0), breaks = seq(2010,2018, by=2),
-                     limits = c(2009,2019)) + 
-  scale_y_continuous(expand = c(0,0), limits = c(0.25,0.45)) + 
-  labs(y = "Pressure Score", x = "Year") + 
-  theme_minimal()
-```
-
-This code chunk creates a google visualization of the scores through time. It unfortunately does not allow the google chart to show up in the RMarkdown knitted document.
-
-```{r googlevis}
-library(googleVis)
-
-plotData <- uv_data %>%
-  dplyr::select(region_id, year, pressure_score)
-
-Motion <- gvisMotionChart(plotData, 
-                       idvar="region_id", 
-                       timevar="year")
-plot(Motion)
-print(Motion, file='uv.html')
 ```
